--- a/app/src/main/res/drawable/bg_79e9c7_ffffff_shape.xml
+++ b/app/src/main/res/drawable/bg_79e9c7_ffffff_shape.xml
@@ -3,6 +3,8 @@
     android:shape="rectangle"
     >
 
-    <gradient android:startColor="@color/color_79E9C7" android:endColor="@color/white"/>
+    <gradient android:startColor="@color/color_79E9C7" android:endColor="@color/white"
+        android:angle="-90"
+        />
 
 </shape>
