--- a/app/src/main/res/drawable/bg_4dp_eff3ff_shape.xml
+++ b/app/src/main/res/drawable/bg_4dp_eff3ff_shape.xml
@@ -2,6 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <corners android:radius="6dp"/>
-    <solid android:color="@color/color_F9EFCA"/>
+
+    <corners android:topLeftRadius="4dp" android:topRightRadius="4dp"/>
+    <solid android:color="#eff3ff"/>
+
 </shape>
