--- a/app/src/main/res/layout/borrowing_activity.xml
+++ b/app/src/main/res/layout/borrowing_activity.xml
@@ -19,6 +19,7 @@
 
 
     <TextView
+        android:id="@+id/borrowing_act_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/color_000000"
