--- a/app/src/main/res/layout/first_home_fragment.xml
+++ b/app/src/main/res/layout/first_home_fragment.xml
@@ -7,187 +7,331 @@
     >
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/bg_4dp_f2f2f2_shape"
-        android:orientation="vertical"
-        android:layout_marginTop="40dp"
-        >
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_59B9AF"
-            android:text="CONGRATULATION!"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="13sp"
-            android:text="Transfer Cash to your Bank Account Instantly"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            />
-
-        <TextView
-            android:id="@+id/first_home_frag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:textColor="@color/color_000000"
-            android:text="upto  ₹"
-            android:layout_marginTop="30sp"
-            android:layout_gravity="center"
-            android:background="@drawable/bg_4dp_f2f2f2_shape"
-            android:paddingTop="3dp"
-            android:paddingBottom="3dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:layout_marginBottom="60dp"
-            />
-
-    </LinearLayout>
-
-
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="17sp"
-        android:text="I need a loan of（INR）"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"/>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
-        >
-
-        <TextView
-            android:id="@+id/money_first"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="5000"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:background="@drawable/bg_20dp_fdc800_shape"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            />
-
-        <TextView
-            android:id="@+id/money_second"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="10000"
-            android:gravity="center"
-            android:textColor="@color/color_000000"
-            android:background="@drawable/bg_20dp_f9efca_shape"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:layout_marginLeft="100dp"
-            android:layout_marginRight="10dp"
-            android:layout_toRightOf="@id/money_first"
-
-            />
-
-
-        <TextView
-            android:id="@+id/money_thread"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="20000"
-            android:gravity="center"
-            android:textColor="@color/color_000000"
-            android:background="@drawable/bg_20dp_f9efca_shape"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:layout_marginRight="10dp"
-            android:layout_below="@id/money_first"
-            android:layout_marginTop="30dp"
-            />
-
-
-        <TextView
-            android:id="@+id/money_four"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="50000"
-            android:gravity="center"
-            android:textColor="@color/color_000000"
-            android:background="@drawable/bg_20dp_f9efca_shape"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:layout_alignTop="@id/money_thread"
-            android:layout_alignLeft="@id/money_second"
-            />
-
-
-    </RelativeLayout>
-
-
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-        android:layout_marginTop="50dp"
-        android:orientation="vertical"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
+        android:scrollbars="none"
         >
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_000000"
-            android:text="New user will have access to interest-\nfree loans\nLoan period  91+ days"
-            android:textSize="18sp"
-            android:layout_marginTop="40dp"
-            />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/bg_4dp_f2f2f2_shape"
+                android:orientation="vertical"
+                android:layout_marginTop="40dp"
+                android:paddingBottom="30dp"
+                >
 
 
-        <TextView
-            android:id="@+id/get_instant_app"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_gravity="center"
-            android:text="Get Instant Approval"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:paddingTop="6dp"
-            android:paddingBottom="6dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:background="@drawable/bg_8dp_20c69d_shape"
-            />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_59B9AF"
+                    android:text="CONGRATULATION!"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:paddingTop="10dp"
+                    android:gravity="center"
+                    android:background="@drawable/bg_4dp_eff3ff_shape"
+                    />
 
-    </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="13sp"
+                    android:text="Transfer Cash to your Bank Account Instantly"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="20dp"
+                    />
+
+                <TextView
+                    android:id="@+id/first_home_frag"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="25sp"
+                    android:text="upto  ₹"
+                    android:textColor="@color/color_000000"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginTop="20dp"
+                    />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#5f5f5f"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="15sp"
+                    android:layout_marginRight="15sp"
+                    />
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:text="I need a loan of（INR）"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="30dp"
+                    />
+
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="30dp"
+                    >
+
+                    <TextView
+                        android:id="@+id/money_first"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:text="5000"
+                        android:gravity="center"
+                        android:textColor="@color/color_000000"
+                        android:background="@drawable/bg_20dp_f9efca_shape"
+                        android:paddingLeft="40dp"
+                        android:paddingRight="40dp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        />
+
+                    <TextView
+                        android:id="@+id/money_second"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:text="10000"
+                        android:gravity="center"
+                        android:textColor="@color/color_000000"
+                        android:background="@drawable/bg_20dp_f9efca_shape"
+                        android:paddingLeft="40dp"
+                        android:paddingRight="40dp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:layout_marginLeft="40dp"
+                        />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="30dp"
+                    >
+
+                    <TextView
+                        android:id="@+id/money_thread"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:text="20000"
+                        android:gravity="center"
+                        android:textColor="@color/color_000000"
+                        android:background="@drawable/bg_20dp_f9efca_shape"
+                        android:paddingLeft="40dp"
+                        android:paddingRight="40dp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        />
+
+
+                    <TextView
+                        android:id="@+id/money_four"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:text="50000"
+                        android:gravity="center"
+                        android:textColor="@color/color_000000"
+                        android:background="@drawable/bg_20dp_f9efca_shape"
+                        android:paddingLeft="40dp"
+                        android:paddingRight="40dp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:layout_marginLeft="40dp"
+                        />
+
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+
+                >
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="15sp"
+                    android:layout_marginRight="15sp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:background="@color/white"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    >
+
+
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center"
+
+                        >
+
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:src="@drawable/money_03"
+
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="13sp"
+                            android:text="Submit Info"
+                            android:layout_marginTop="4dp"
+                            android:textColor="@color/color_000000"
+                            />
+
+                    </LinearLayout>
+
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="········>"
+                        android:textColor="#4788fe"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        >
+
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:src="@drawable/user"
+                            android:scaleType="fitXY"
+
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="13sp"
+                            android:text="Get credit score"
+                            android:layout_marginTop="4dp"
+                            android:textColor="@color/color_000000"
+                            android:maxLines="1"
+                            android:ellipsize="end"
+                            />
+
+                    </LinearLayout>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="········>"
+                        android:textColor="#4788fe"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center"
+
+                        >
+
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:src="@drawable/money"
+
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="13sp"
+                            android:text="Get Money"
+                            android:layout_marginTop="4dp"
+                            android:textColor="@color/color_000000"
+                            />
+
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_000000"
+                    android:text="New user will have access to interest-\nfree loans\nLoan period  91+ days"
+                    android:textSize="15sp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    />
+
+
+                <TextView
+                    android:id="@+id/get_instant_app"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_gravity="center"
+                    android:text="Get Instant Approval"
+                    android:textColor="@color/white"
+                    android:textSize="25sp"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:background="@drawable/bg_8dp_20c69d_shape"
+                    android:layout_marginBottom="30dp"
+                    />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
 
 </LinearLayout>
