--- a/app/src/main/res/layout/basic_init_activity.xml
+++ b/app/src/main/res/layout/basic_init_activity.xml
@@ -370,6 +370,7 @@
                 android:textSize="12sp"
                 android:text="State  "
                 android:layout_marginTop="20dp"
+                android:visibility="invisible"
                 />
 
             <LinearLayout
@@ -378,6 +379,7 @@
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:layout_marginTop="4dp"
+                android:visibility="invisible"
                 >
 
                 <ImageView
